--- a/MovieApp/Base.lproj/Main.storyboard
+++ b/MovieApp/Base.lproj/Main.storyboard
@@ -1,24 +1,128 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MovieApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="5Ar-mu-z9g">
+                                <rect key="frame" x="0.0" y="103" width="390" height="707"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="209" id="Qfi-dd-qRP">
+                                        <rect key="frame" x="0.0" y="50" width="390" height="209"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Qfi-dd-qRP" id="Gqf-V6-VPi">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="209"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iV9-fO-w8o">
+                                                    <rect key="frame" x="5" y="5" width="90" height="199"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="90" id="XZH-sV-oY1"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="255" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="56A-iJ-fjY">
+                                                    <rect key="frame" x="100" y="5" width="285" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="data" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jpA-O2-AFP">
+                                                    <rect key="frame" x="100" y="31" width="285" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iiK-py-Obk">
+                                                    <rect key="frame" x="100" y="57" width="285" height="121"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wrl-Jv-QIC">
+                                                    <rect key="frame" x="100" y="183" width="285" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="iiK-py-Obk" firstAttribute="leading" secondItem="iV9-fO-w8o" secondAttribute="trailing" constant="5" id="0JT-aB-v93"/>
+                                                <constraint firstAttribute="trailing" secondItem="jpA-O2-AFP" secondAttribute="trailing" constant="5" id="3VW-Cj-E4A"/>
+                                                <constraint firstItem="iiK-py-Obk" firstAttribute="top" secondItem="jpA-O2-AFP" secondAttribute="bottom" constant="5" id="KbV-Hn-eqV"/>
+                                                <constraint firstItem="iV9-fO-w8o" firstAttribute="top" secondItem="Gqf-V6-VPi" secondAttribute="top" constant="5" id="LjH-k7-j3H"/>
+                                                <constraint firstAttribute="trailing" secondItem="Wrl-Jv-QIC" secondAttribute="trailing" constant="5" id="Mar-ao-hfa"/>
+                                                <constraint firstItem="56A-iJ-fjY" firstAttribute="top" secondItem="Gqf-V6-VPi" secondAttribute="top" constant="5" id="Q8r-R4-VYg"/>
+                                                <constraint firstItem="56A-iJ-fjY" firstAttribute="leading" secondItem="iV9-fO-w8o" secondAttribute="trailing" constant="5" id="SkO-iy-AcO"/>
+                                                <constraint firstAttribute="trailing" secondItem="56A-iJ-fjY" secondAttribute="trailing" constant="5" id="UXM-kD-ViG"/>
+                                                <constraint firstItem="Wrl-Jv-QIC" firstAttribute="top" secondItem="iiK-py-Obk" secondAttribute="bottom" constant="5" id="Yk0-h4-8ro"/>
+                                                <constraint firstAttribute="bottom" secondItem="iV9-fO-w8o" secondAttribute="bottom" constant="5" id="aYh-sl-hLp"/>
+                                                <constraint firstAttribute="bottom" secondItem="Wrl-Jv-QIC" secondAttribute="bottom" constant="5" id="fnN-Sb-Adu"/>
+                                                <constraint firstItem="iV9-fO-w8o" firstAttribute="leading" secondItem="Gqf-V6-VPi" secondAttribute="leading" constant="5" id="ibf-3T-2lu"/>
+                                                <constraint firstAttribute="trailing" secondItem="iiK-py-Obk" secondAttribute="trailing" constant="5" id="jGg-ar-ZZP"/>
+                                                <constraint firstItem="jpA-O2-AFP" firstAttribute="top" secondItem="56A-iJ-fjY" secondAttribute="bottom" constant="5" id="ldN-6c-sC5"/>
+                                                <constraint firstItem="jpA-O2-AFP" firstAttribute="leading" secondItem="iV9-fO-w8o" secondAttribute="trailing" constant="5" id="ns1-e6-d7p"/>
+                                                <constraint firstItem="Wrl-Jv-QIC" firstAttribute="leading" secondItem="iV9-fO-w8o" secondAttribute="trailing" constant="5" id="xeO-b0-2vm"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="k5C-vu-2CJ">
+                                <rect key="frame" x="0.0" y="47" width="390" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Cm8-t4-hdc"/>
+                                </connections>
+                            </searchBar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5Ar-mu-z9g" secondAttribute="trailing" id="6r7-BV-KdP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5Ar-mu-z9g" secondAttribute="bottom" id="A9t-pX-aJS"/>
+                            <constraint firstItem="k5C-vu-2CJ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="L2s-0m-QRJ"/>
+                            <constraint firstItem="5Ar-mu-z9g" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="MDf-zc-tL2"/>
+                            <constraint firstItem="k5C-vu-2CJ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="a2A-Kf-F5a"/>
+                            <constraint firstItem="k5C-vu-2CJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="a2T-rB-M5d"/>
+                            <constraint firstItem="5Ar-mu-z9g" firstAttribute="top" secondItem="k5C-vu-2CJ" secondAttribute="bottom" id="msy-DP-L2O"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="movieTableView" destination="5Ar-mu-z9g" id="HeJ-0y-FiM"/>
+                        <outlet property="searchBar" destination="k5C-vu-2CJ" id="dfB-dy-d0t"/>
+                        <outlet property="searchDisplayController" destination="pqa-Vh-Xa3" id="Atj-ku-plA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="pqa-Vh-Xa3">
+                    <connections>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="ype-zi-cQ1"/>
+                        <outlet property="searchBar" destination="k5C-vu-2CJ" id="6yw-Vh-U0F"/>
+                        <outlet property="searchContentsController" destination="BYZ-38-t0r" id="f67-dg-F8j"/>
+                        <outlet property="searchResultsDataSource" destination="BYZ-38-t0r" id="KsY-1j-b4A"/>
+                        <outlet property="searchResultsDelegate" destination="BYZ-38-t0r" id="Pcr-sD-i03"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
+            <point key="canvasLocation" x="130.76923076923077" y="-28.436018957345969"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
