--- a/MovieApp/DetailViewController.storyboard
+++ b/MovieApp/DetailViewController.storyboard
@@ -18,29 +18,45 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fD7-A0-bhi">
                                 <rect key="frame" x="0.0" y="67" width="390" height="200"/>
-                                <color key="backgroundColor" systemColor="systemCyanColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="HV5-y5-14T"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gsf-8o-XFl">
-                                <rect key="frame" x="20" y="287" width="350" height="21"/>
+                                <rect key="frame" x="20" y="342" width="350" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zyO-LT-hwY">
-                                <rect key="frame" x="20" y="328" width="350" height="40.666666666666686"/>
+                                <rect key="frame" x="20" y="383" width="350" height="40.666666666666686"/>
                                 <string key="text">description
 description</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FkW-9e-pzI">
+                                <rect key="frame" x="302" y="287" width="68" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="STOP"/>
+                                <connections>
+                                    <action selector="stop:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="FHk-t2-7Jm"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dRL-J6-kyJ">
+                                <rect key="frame" x="217" y="287" width="65" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="PLAY"/>
+                                <connections>
+                                    <action selector="play:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="fud-b8-PeY"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="FkW-9e-pzI" firstAttribute="top" secondItem="fD7-A0-bhi" secondAttribute="bottom" constant="20" id="1s8-Iy-YMh"/>
                             <constraint firstItem="zyO-LT-hwY" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="2xb-sa-u2i"/>
                             <constraint firstItem="fD7-A0-bhi" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="BCv-v4-U0E"/>
                             <constraint firstItem="gsf-8o-XFl" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="JJG-NH-JLB"/>
@@ -48,9 +64,12 @@ description</string>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="zyO-LT-hwY" secondAttribute="bottom" constant="20" id="KpT-xK-hF1"/>
                             <constraint firstItem="fD7-A0-bhi" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="R3R-4e-maF"/>
                             <constraint firstItem="zyO-LT-hwY" firstAttribute="top" secondItem="gsf-8o-XFl" secondAttribute="bottom" constant="20" id="XNE-Do-THk"/>
+                            <constraint firstItem="gsf-8o-XFl" firstAttribute="top" secondItem="FkW-9e-pzI" secondAttribute="bottom" constant="20" id="giT-lE-LQq"/>
+                            <constraint firstItem="FkW-9e-pzI" firstAttribute="leading" secondItem="dRL-J6-kyJ" secondAttribute="trailing" constant="20" id="oqU-5p-36f"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="fD7-A0-bhi" secondAttribute="trailing" id="qrM-gb-p1c"/>
-                            <constraint firstItem="gsf-8o-XFl" firstAttribute="top" secondItem="fD7-A0-bhi" secondAttribute="bottom" constant="20" id="uQr-H8-Oct"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="FkW-9e-pzI" secondAttribute="trailing" constant="20" id="uHN-p4-rdm"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zyO-LT-hwY" secondAttribute="trailing" constant="20" id="wYd-5l-SUm"/>
+                            <constraint firstItem="dRL-J6-kyJ" firstAttribute="top" secondItem="fD7-A0-bhi" secondAttribute="bottom" constant="20" id="yLH-MN-BOC"/>
                         </constraints>
                     </view>
                     <connections>
@@ -67,9 +86,6 @@ description</string>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemCyanColor">
-            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
